# JSON-Toolbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
cmake/config/: compiler.config.cmake  project.config.cmake
cmake/config/toolchain/: linux-x86_64.cmake  windows-x86_64.cmake
cmake/module/log-mod/: logger.cmake
cmake/module/test-mod/: define-unit-test.cmake  fetch-gtest.cmake  gtest-for-clang-cl.cmake
docs/: Inline-Documentation.md  JTB-Formatting-and-Styling.md  To-Do-List.md
source/lib/buffer/: CMakeLists.txt  buffer.cxx
test/: CMakeLists.txt  buffer.test.cxx
tools/: jbox-config.ps1
